# OPUS

./: .gitignore
main/: build_mac.sh  build_win.bat  environment.yml  opus_lease.spec  pyproject.toml  run_app.py
main/app/: launcher.py  main.py  state.py
main/app/static/: index.html
main/app/static/assets/: opus.icns
main/app/static/css/: style.css
main/app/static/js/: app.js
main/config/: doc_type_signals.yaml  field_map.yaml
main/doc/: lease_summary_automation_plan.md  lease_summary_field_mapping_spec.md  lease_summary_python_first_implementation.md
main/scripts/: evaluate_groundtruth.py  pure_vision_benchmark.py
main/src/lease_summary/: compare_cli.py  doc_type.py  llm_config.py  models.py  pipeline.py
main/src/lease_summary/extractors/: ai_clauses.py  ai_fallback.py  ai_primary.py  base.py  clauses.py  dates.py  financials.py  parties.py  premises.py
main/src/lease_summary/normalizers/: currency.py  dates.py  text.py
main/src/lease_summary/parsers/: document_converter.py  pdf_text.py
main/src/lease_summary/review/: flags.py
main/src/lease_summary/writers/: excel_writer.py
main/src/lease_summary_v2/: __init__.py  cli.py  compare_cli.py  config.py  models.py  pipeline.py
main/tests/: test_ai_enhanced_refactor.py  test_ai_primary.py  test_app_state.py  test_compare_cli.py  test_example_alignment.py  test_excel_writer.py  test_extractors.py  test_golden_eval.py  test_kld_renewal.py  test_llm_config.py  test_main_settings.py  test_pipeline.py  test_qa_engine.py  test_trade_desk_clauses.py
main/tests/golden/: hollywood_centre.expected.json
(+37 files in other folders)
